--- a/build-TicTacToe-Desktop_Qt_5_5_1_GCC_64bit-Debug/Makefile
+++ b/build-TicTacToe-Desktop_Qt_5_5_1_GCC_64bit-Debug/Makefile
@@ -14,7 +14,7 @@ CC            = gcc
 CXX           = g++
 DEFINES       = -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_SQL_LIB -DQT_CORE_LIB
 CFLAGS        = -pipe -g -Wall -W -D_REENTRANT -fPIC $(DEFINES)
-CXXFLAGS      = -pipe -g -Wall -W -D_REENTRANT -fPIC $(DEFINES)
+CXXFLAGS      = -pipe -g -std=c++0x -Wall -W -D_REENTRANT -fPIC $(DEFINES)
 INCPATH       = -I../TicTacToe -I. -I/opt/Qt5.5.1/5.5/gcc_64/include -I/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets -I/opt/Qt5.5.1/5.5/gcc_64/include/QtGui -I/opt/Qt5.5.1/5.5/gcc_64/include/QtSql -I/opt/Qt5.5.1/5.5/gcc_64/include/QtCore -I. -I. -I/opt/Qt5.5.1/5.5/gcc_64/mkspecs/linux-g++
 QMAKE         = /opt/Qt5.5.1/5.5/gcc_64/bin/qmake
 DEL_FILE      = rm -f
@@ -58,7 +58,8 @@ SOURCES       = ../TicTacToe/main.cpp \
 		../TicTacToe/gameoption.cpp \
 		../TicTacToe/gamemode.cpp \
 		../TicTacToe/playergameoptions.cpp \
-		../TicTacToe/aiclass.cpp qrc_resources.cpp \
+		../TicTacToe/aiclass.cpp \
+		../TicTacToe/user.cpp qrc_resources.cpp \
 		moc_maintictactoe.cpp \
 		moc_loginscene.cpp \
 		moc_registrationscene.cpp \
@@ -79,6 +80,7 @@ OBJECTS       = main.o \
 		gamemode.o \
 		playergameoptions.o \
 		aiclass.o \
+		user.o \
 		qrc_resources.o \
 		moc_maintictactoe.o \
 		moc_loginscene.o \
@@ -211,6 +213,7 @@ DIST          = /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/spec_pre.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/default_pre.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/resolve_config.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/default_post.prf \
+		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/c++11.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/warn_on.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/qt.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/resources.prf \
@@ -231,7 +234,8 @@ DIST          = /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/spec_pre.prf \
 		../TicTacToe/gameoption.h \
 		../TicTacToe/gamemode.h \
 		../TicTacToe/playergameoptions.h \
-		../TicTacToe/aiclass.h ../TicTacToe/main.cpp \
+		../TicTacToe/aiclass.h \
+		../TicTacToe/user.h ../TicTacToe/main.cpp \
 		../TicTacToe/maintictactoe.cpp \
 		../TicTacToe/loginscene.cpp \
 		../TicTacToe/registrationscene.cpp \
@@ -241,7 +245,8 @@ DIST          = /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/spec_pre.prf \
 		../TicTacToe/gameoption.cpp \
 		../TicTacToe/gamemode.cpp \
 		../TicTacToe/playergameoptions.cpp \
-		../TicTacToe/aiclass.cpp
+		../TicTacToe/aiclass.cpp \
+		../TicTacToe/user.cpp
 QMAKE_TARGET  = TicTacToe
 DESTDIR       = #avoid trailing-slash linebreak
 TARGET        = TicTacToe
@@ -394,6 +399,7 @@ Makefile: ../TicTacToe/TicTacToe.pro /opt/Qt5.5.1/5.5/gcc_64/mkspecs/linux-g++/q
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/default_pre.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/resolve_config.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/default_post.prf \
+		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/c++11.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/warn_on.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/qt.prf \
 		/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/resources.prf \
@@ -534,6 +540,7 @@ Makefile: ../TicTacToe/TicTacToe.pro /opt/Qt5.5.1/5.5/gcc_64/mkspecs/linux-g++/q
 /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/default_pre.prf:
 /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/resolve_config.prf:
 /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/default_post.prf:
+/opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/c++11.prf:
 /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/warn_on.prf:
 /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/qt.prf:
 /opt/Qt5.5.1/5.5/gcc_64/mkspecs/features/resources.prf:
@@ -566,8 +573,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents ../TicTacToe/resources.qrc $(DISTDIR)/
-	$(COPY_FILE) --parents ../TicTacToe/maintictactoe.h ../TicTacToe/loginscene.h ../TicTacToe/registrationscene.h ../TicTacToe/resetpassword.h ../TicTacToe/difficultylevel.h ../TicTacToe/gameboard.h ../TicTacToe/gameoption.h ../TicTacToe/gamemode.h ../TicTacToe/playergameoptions.h ../TicTacToe/aiclass.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../TicTacToe/main.cpp ../TicTacToe/maintictactoe.cpp ../TicTacToe/loginscene.cpp ../TicTacToe/registrationscene.cpp ../TicTacToe/resetpassword.cpp ../TicTacToe/difficultylevel.cpp ../TicTacToe/gameboard.cpp ../TicTacToe/gameoption.cpp ../TicTacToe/gamemode.cpp ../TicTacToe/playergameoptions.cpp ../TicTacToe/aiclass.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../TicTacToe/maintictactoe.h ../TicTacToe/loginscene.h ../TicTacToe/registrationscene.h ../TicTacToe/resetpassword.h ../TicTacToe/difficultylevel.h ../TicTacToe/gameboard.h ../TicTacToe/gameoption.h ../TicTacToe/gamemode.h ../TicTacToe/playergameoptions.h ../TicTacToe/aiclass.h ../TicTacToe/user.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../TicTacToe/main.cpp ../TicTacToe/maintictactoe.cpp ../TicTacToe/loginscene.cpp ../TicTacToe/registrationscene.cpp ../TicTacToe/resetpassword.cpp ../TicTacToe/difficultylevel.cpp ../TicTacToe/gameboard.cpp ../TicTacToe/gameoption.cpp ../TicTacToe/gamemode.cpp ../TicTacToe/playergameoptions.cpp ../TicTacToe/aiclass.cpp ../TicTacToe/user.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../TicTacToe/maintictactoe.ui ../TicTacToe/loginscene.ui ../TicTacToe/registrationscene.ui ../TicTacToe/resetpassword.ui ../TicTacToe/difficultylevel.ui ../TicTacToe/gameoption.ui ../TicTacToe/gamemode.ui ../TicTacToe/gameboard.ui ../TicTacToe/playergameoptions.ui $(DISTDIR)/
 
 
@@ -2016,7 +2023,7 @@ maintictactoe.o: ../TicTacToe/maintictactoe.cpp ../TicTacToe/maintictactoe.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QDebug \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/QSql \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/qsql.h \
-		../TicTacToe/ui_maintictactoe.h \
+		ui_maintictactoe.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -2469,7 +2476,7 @@ loginscene.o: ../TicTacToe/loginscene.cpp ../TicTacToe/loginscene.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/qsqltablemodel.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/qtsqlversion.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/QSqlDatabase \
-		../TicTacToe/ui_loginscene.h \
+		ui_loginscene.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -2512,6 +2519,8 @@ loginscene.o: ../TicTacToe/loginscene.cpp ../TicTacToe/loginscene.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/QMouseEvent \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QGraphicsSceneMouseEvent \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qgraphicssceneevent.h \
+		../TicTacToe/user.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QString \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QMessageBox \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qmessagebox.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/QSqlError \
@@ -2631,7 +2640,7 @@ registrationscene.o: ../TicTacToe/registrationscene.cpp ../TicTacToe/registratio
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/qsql.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QDialog \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qdialog.h \
-		../TicTacToe/ui_registrationscene.h \
+		ui_registrationscene.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -2679,6 +2688,8 @@ registrationscene.o: ../TicTacToe/registrationscene.cpp ../TicTacToe/registratio
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qpushbutton.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qabstractbutton.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QWidget \
+		../TicTacToe/user.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QString \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qmessagebox.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/QSqlDatabase \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtSql/qsqldatabase.h \
@@ -2911,7 +2922,7 @@ resetpassword.o: ../TicTacToe/resetpassword.cpp ../TicTacToe/resetpassword.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qfiledevice.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qvector2d.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qtouchdevice.h \
-		../TicTacToe/ui_resetpassword.h \
+		ui_resetpassword.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -3220,7 +3231,7 @@ difficultylevel.o: ../TicTacToe/difficultylevel.cpp ../TicTacToe/difficultylevel
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qlineedit.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qtextcursor.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qtextformat.h \
-		../TicTacToe/ui_difficultylevel.h \
+		ui_difficultylevel.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -3382,7 +3393,7 @@ gameboard.o: ../TicTacToe/gameboard.cpp ../TicTacToe/gameboard.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qgraphicssceneevent.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QDialog \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qdialog.h \
-		../TicTacToe/ui_gameboard.h \
+		ui_gameboard.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -3528,7 +3539,7 @@ gameoption.o: ../TicTacToe/gameoption.cpp ../TicTacToe/gameoption.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qfiledevice.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qvector2d.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qtouchdevice.h \
-		../TicTacToe/ui_gameoption.h \
+		ui_gameoption.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -3704,7 +3715,7 @@ gamemode.o: ../TicTacToe/gamemode.cpp ../TicTacToe/gamemode.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qfiledevice.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qvector2d.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qtouchdevice.h \
-		../TicTacToe/ui_gamemode.h \
+		ui_gamemode.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -3883,7 +3894,7 @@ playergameoptions.o: ../TicTacToe/playergameoptions.cpp ../TicTacToe/playergameo
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qfiledevice.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qvector2d.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/qtouchdevice.h \
-		../TicTacToe/ui_playergameoptions.h \
+		ui_playergameoptions.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QVariant \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/QAction \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtWidgets/qaction.h \
@@ -4083,6 +4094,76 @@ aiclass.o: ../TicTacToe/aiclass.cpp ../TicTacToe/aiclass.h \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QDebug \
 		/opt/Qt5.5.1/5.5/gcc_64/include/QtGui/QPainter
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o aiclass.o ../TicTacToe/aiclass.cpp
+
+user.o: ../TicTacToe/user.cpp ../TicTacToe/user.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QString \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qstring.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qchar.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qglobal.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qconfig.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qfeatures.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qsystemdetection.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qprocessordetection.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qcompilerdetection.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qtypeinfo.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qtypetraits.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qsysinfo.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qlogging.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qflags.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qbasicatomic.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qgenericatomic.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_cxx11.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_gcc.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_msvc.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_armv7.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_armv6.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_armv5.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_ia64.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_mips.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_x86.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qatomic_unix.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qglobalstatic.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qmutex.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qnumeric.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qbytearray.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qrefcount.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qnamespace.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qarraydata.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qstringbuilder.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/QDebug \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qdebug.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qalgorithms.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qhash.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qiterator.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qlist.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qbytearraylist.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qstringlist.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qregexp.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qstringmatcher.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qpair.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qmap.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qtextstream.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qiodevice.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qobject.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qobjectdefs.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qcoreevent.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qscopedpointer.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qmetatype.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qvarlengtharray.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qcontainerfwd.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qisenum.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qobject_impl.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qlocale.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qvariant.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qshareddata.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qvector.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qpoint.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qset.h \
+		/opt/Qt5.5.1/5.5/gcc_64/include/QtCore/qcontiguouscache.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o user.o ../TicTacToe/user.cpp
 
 qrc_resources.o: qrc_resources.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_resources.o qrc_resources.cpp
